--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 title: Phil McCarthy
 description: >- # this means to ignore newlines until "baseurl:"
-  Hey! I'm Phil. I'm a software developer based in Denver.
+  Hey! I'm Phil. I'm a software engineer based in Denver.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
